@@ -1,3 +1,15 @@
+2015-03-10  Joseph Pecoraro  <pecoraro@apple.com>
+
+        Web Inspector: console.error output broken, does not produce ObjectTree
+        https://bugs.webkit.org/show_bug.cgi?id=142554
+
+        Reviewed by Timothy Hatcher.
+
+        * UserInterface/Models/IssueMessage.js:
+        (WebInspector.IssueMessage):
+        * UserInterface/Protocol/ConsoleObserver.js:
+        (WebInspector.ConsoleObserver.prototype.messageAdded):
+
 2015-03-10  Saam Barati  <saambarati1@gmail.com>
 
         Web Inspector: Destructuring function parameters should show type information
